--- a/spring web/springweb-ayan/src/main/resources/templates/books.html
+++ b/spring web/springweb-ayan/src/main/resources/templates/books.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+<script
+	src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <title>DİM vesaitler</title>
 </head>
 <body>
-	<h3>Satilan DİM vesaitler:</h3>
-	<table>
+	<h4>Satılan DİM vesaitler:</h4>
+	<form th:action="@{/search}">
+	<input name="b">
+	</form>
+	<table class="table table-bordered table-hover table-striped">
 		<thead>
 			<tr>
-				<th>Kitablar</th>
-				<th>Qiymetler</th>
-				<th>Say</th>
+				<th>Id</th>
+				<th>Name</th>
+				<th>Price</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				<td>Riyaziyyat</td>
-				<td>15</td>
-				<td>3</td>
-			</tr>
-			<tr>
-				<td>Fizika</td>
-				<td>25</td>
-				<td>6</td>
-			</tr>
-			<tr>
-				<td>Edebiyyat</td>
-				<td>10</td>
-				<td>2</td>
-			</tr>
-			<tr>
-				<td>Umumi tarix</td>
-				<td>22</td>
-				<td>5</td>
+			<tr th:each="book : ${books}">
+				<td th:text="${book.id}"></td>
+				<td th:text="${book.name}"></td>
+				<td th:text="${book.price}"></td>
+				<td><a th:href="@{/books/{id}(id=${book.id})}" class="btn btn-danger">Sil</a></td>
 			</tr>
 		</tbody>
 	</table>
