--- a/spring web MVC/iki/springweb-ayann/src/main/resources/templates/books.html
+++ b/spring web MVC/iki/springweb-ayann/src/main/resources/templates/books.html
@@ -11,15 +11,15 @@
 	src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-<title>DİM vesaitler</title>
+<title>Kitablar</title>
 </head>
 <body>
-	<h4>Satılan DİM vesaitler:</h4>
-	<form th:action="@{/search}">
+	<h4>Satışda olan kitablar</h4>
+	<form th:action="@{/book/search}">
 		<input name="b">
 	</form>
 
-	<a th:href="@{/books/new}">Kitab Qeydiyyatı</a>
+	<a th:href="@{/book/new}">Kitab Qeydiyyatı</a>
 	<table class="table table-bordered table-hover table-striped">
 		<thead>
 			<tr>
@@ -27,7 +27,7 @@
 				<th>Name</th>
 				<th>Price</th>
 				<th>Language</th>
-				<th>Author</th>
+				<th>Authors</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -36,7 +36,6 @@
 				<td th:text="${book.name}"></td>
 				<td th:text="${book.price}"></td>
 				<td th:text="${book.language}"></td>
-				<td th:text="${book.author}"></td>
 				<td><a th:href="@{/books/{id}(id=${book.id})}"
 					class="btn btn-danger">Sil</a></td>
 			</tr>
