--- a/spring web MVC 2/springweb-ayaan/src/main/resources/templates/save-book.html
+++ b/spring web MVC 2/springweb-ayaan/src/main/resources/templates/save-book.html
@@ -9,7 +9,7 @@
 	src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
 <script
 	src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script
+<script 
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <title>Kitab qeydiyyatı</title>
 <style type="text/css">
@@ -24,15 +24,20 @@ label {
 		<form th:action="@{/kitab/save}" th:method="post" th:object="${book}">
 			<label for="book-name">Name</label><br> 
 			<input id="book-name" th:field="*{name}" class="form-control">
-			<div  th:errors="*{name}" class="validation-error">
-			</div> 
+			<div  style="color: red; font-weight: bold;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="validation-error"></div> 
 			
 			<label for="book-price">Price</label><br> 
-			<input id="book-price" th:field="*{price}" class="form-control">
+			<input type="number" id="book-price" th:field="*{price}" class="form-control">
+			<div  style="color: red; font-weight: bold;" th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="validation-error"></div> 
+			
+			<label for="book-publishDate">Publish Date</label><br> 
+			<input type="date" id="book-publishDate" th:field="*{publishDate}" class="form-control">
+			<div  style="color: red; font-weight: bold;" th:if="${#fields.hasErrors('publishDate')}" th:errors="*{publishDate}" class="validation-error"></div> 
+
 			
 			<label for="book-language">Language</label><br> 
 			<select id="book-language" th:field="*{language}" class="form-control">
-			<option th:each="lang : ${languages}" th:value="${lang}" th:text="${lang}"></option> <! dırnaq arasına istənilən şey yazıla bilər -->
+			<option th:each="lang : ${languages}" th:value="${lang}" th:text="${lang}"></option> <!--  dırnaq arasına istənilən şey yazıla bilər -->
 			
 			</select>
 			
