--- a/spring web MVC 2/springweb-ayann-jdbc/src/main/resources/templates/books.html
+++ b/spring web MVC 2/springweb-ayann-jdbc/src/main/resources/templates/books.html
@@ -39,7 +39,7 @@
 		<tbody>
 			<tr th:each="book : ${kitab}">
 				<!-- book yerine istenilen sey qoyula biler -->
-				<td th:text="${book.id}"></td>
+				<td th:text="${book.id}"></td> <!-- id yerine counter qoyula biler -->
 				<td th:text="${book.name}"></td>
 				<td th:text="${book.price}"></td>
 				<td th:text="${book.phone}"></td>
