--- a/spring web MVC 2/spring-security-ayaan/src/main/resources/templates/books.html
+++ b/spring web MVC 2/spring-security-ayaan/src/main/resources/templates/books.html
@@ -31,7 +31,7 @@
 			<tr>
 				<th>İd</th>
 				<th>Name</th>
-				<th>Price</th>
+				<th>Surname</th>
 				<th>Operators</th>
 			</tr>
 		</thead>
@@ -40,7 +40,7 @@
 				<!-- book yerine istenilen sey qoyula biler -->
 				<td th:text="${book.id}"></td> <!-- id yerine counter qoyula biler -->
 				<td th:text="${book.name}"></td>
-				<td th:text="${book.price}"></td>
+				<td th:text="${book.surname}"></td>
 
 				<td><a th:href="@{/kitab/{id}(id=${book.id})}"
 					class="btn btn-danger">Delete</a></td>
