--- a/spring web MVC 2/spring-mappings-ayaan/src/main/resources/templates/signup.html
+++ b/spring web MVC 2/spring-mappings-ayaan/src/main/resources/templates/signup.html
@@ -11,7 +11,7 @@
 	src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script 
 	src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-<title>Kitab qeydiyyatı</title>
+<title>Yeni user</title>
 <style type="text/css">
 label {
 	font-weight: bold;
@@ -19,17 +19,15 @@ label {
 </style>
 </head>
 <body>
-	<h5>Kitab qeydiyyatı üçün aşağıdakıları doldurun!</h5>
+	<h5>Yeni user qeydiyyatı formu</h5>
 	<div style="width: 30%; margin: auto;">
-		<form th:action="@{/kitab/save}" th:method="post" th:object="${book}">
+		<form th:action="@{/users/save}" th:method="post" th:object="${user}">
 			
-			<label for="book-name">Name</label><br> 
-			<input id="book-name" th:field="*{name}" class="form-control">
-			<div  style="color: red; font-weight: bold;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="validation-error"></div> 
+			<label for="username">Username</label><br> 
+			<input id="username" th:field="*{username}" class="form-control">
 			
-			<label for="book-surname">Surname</label><br> 
-			<input id="book-surname" th:field="*{surname}" class="form-control">
-			<div  style="color: red; font-weight: bold;" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" class="validation-error"></div><br>
+			<label for="password">Password</label><br> 
+			<input id="password" th:field="*{password}" class="form-control"><br>
 				
 			<input type="submit" value="Qeyd et" class="btn btn-success">
 		</form>
